<resources>
    <string name="app_name">Innoventes App</string>
    <string name="next">Next</string>
    <string name="enter_pan_card_number">Enter PAN Card Number</string>
    <string name="dd">DD</string>
    <string name="mm">MM</string>
    <string name="yyyy">YYYY</string>
    <string name="s">S.</string>
    <string name="instructions">First of the few steps to set \nyou up with a Bank Account</string>
    <string name="pan_number_str">PAN NUMBER</string>
    <string name="birth_date_str">BIRTHDATE</string>
    <string name="i_don_t_hav_a_pan">I don\'t have a PAN</string>
    <string name="kyc_inst_str">Providing PAN &amp; Date of Birth helps us find and\nfetch your KYC from a central registry by the\nGovernment of India.<font color="#6041b0">Learn more</font></string>
</resources>