<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:padding="16dp"
        android:background="@color/white"
        tools:context=".MainActivity">


        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textSize="26sp"
            android:text="@string/s"
            android:textColor="@color/heading_color"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvInstruction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textSize="24sp"
            android:layout_marginTop="15dp"
            android:text="@string/instructions"
            android:textColor="@color/color_accent"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvName" />

        <TextView
            android:id="@+id/tvPanNoStr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textSize="12sp"
            android:layout_marginTop="50dp"
            android:text="@string/pan_number_str"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvInstruction" />


        <EditText
            android:id="@+id/etPANCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/edit_text_border"
            android:hint="@string/enter_pan_card_number"
            android:padding="10dp"
            android:maxLength="10"
            android:inputType="textCapCharacters"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvPanNoStr" />


        <TextView
            android:id="@+id/tvBirthDateStr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textSize="12sp"
            android:layout_marginTop="50dp"
            android:text="@string/birth_date_str"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etPANCard" />

        <LinearLayout
            android:id="@+id/llDob"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvBirthDateStr">

            <EditText
                android:id="@+id/etDay"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:background="@drawable/dob_border"
                android:gravity="center"
                android:layout_marginEnd="15dp"
                android:hint="@string/dd"
                android:inputType="number"
                android:maxLength="2"
                android:padding="10dp" />

            <EditText
                android:id="@+id/etMonth"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:background="@drawable/dob_border"
                android:gravity="center"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="15dp"
                android:hint="@string/mm"
                android:inputType="number"
                android:maxLength="2"
                android:padding="10dp" />

            <EditText
                android:id="@+id/etYear"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/dob_border"
                android:gravity="center"
                android:layout_marginStart="15dp"
                android:hint="@string/yyyy"
                android:inputType="number"
                android:maxLength="4"
                android:padding="10dp" />
        </LinearLayout>

        <TextView
            android:id="@+id/tvKycInstruction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/kyc_inst_str"
            android:textSize="14sp"
            android:layout_marginBottom="10dp"
            app:layout_constraintBottom_toTopOf="@id/btnNext"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/btnNext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:text="@string/next"
            android:visibility="visible"
            android:enabled="false"
            android:background="@drawable/button_bg"
            android:textAllCaps="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/tvDonotHavePan" />

                <TextView
                    android:id="@+id/tvDonotHavePan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/i_don_t_hav_a_pan"
                    android:textSize="16sp"
                    android:gravity="center"
                    android:textColor="@color/color_primary"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
